utilisation de la methode utilitaire promptOptional pour les input de updateCustomer()